# Store

./: .gitignore  README.md  pyproject.toml
catalog/: urls.py
catalog/templates/: contacts.html
config/: settings.py  urls.py
